# nft-marketplace-ai

./: .gitignore  API_DOCUMENTATION.md  Anchor.toml  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_README.md  README.md  check-production.sh  deploy.sh  docker-compose.yml  frontend-integration-example.html  index.html  nginx.conf  start.sh  transfer-sol.js
api/: Cargo.toml
api/src/: main.rs
backend/: .env.example  Cargo.toml
backend/src/: api.rs  collection.rs  freepik_api.rs  main.rs  marketplace.rs  nft.rs  wallet.rs
contract-service/: Cargo.toml
contract-service/src/: lib.rs
contracts/nft_marketplace/: Anchor.toml  Cargo.toml
contracts/nft_marketplace/src/: lib.rs
image-service/: Cargo.toml
image-service/src/: freepik_client.rs  main.rs
node-script/: colosseum-nft-test.js  compute-bs58.js  mint-and-transfer.js  package.json
scripts/: deploy-contracts.sh  setup-devnet.sh
shared/src/: lib.rs
test-contract/: Cargo.toml
test-contract/src/: lib.rs
