[package]
name = "nft-marketplace-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-client = "1.18"
anchor-client = "0.30"
mpl-token-metadata = "4.1"
spl-token = "4.0"
spl-associated-token-account = "2.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }